# pose

./: .gitignore  README.adoc  pose.el  pose.rb  pose.scm  pose.sld  pose.sls  symbol.text  test6.scm
.github/workflows/: csharp.yml  fsharp.yml  golang.yml  ruby.yml
c/: COPYING  crscl.c  crscl.h
common-lisp/: pose.lisp
csharp/: Pose.sln
csharp/src/Pose/: Pose.cs
csharp/tests/Tests/: PoseReaderTests.cs  Tests.csproj
dotnet/: pose.fsx
examples/: hello.pose  numbers-and-symbols.pose  srfi.pose
examples/test/: comment.pose  list-within-list.result  small-negative-decimal.pose  string-with-escape.pose  unicode-string.result
fsharp/: Pose.sln  README.md
fsharp/src/Pose/: Library.fs  Pose.fsproj  pose.fsx
fsharp/tests/Tests/: Tests.fs  Tests.fsproj
go/: go.mod  pose.go  pose_test.go
python/: .gitignore  LICENSE  README.md  pose.py  pyproject.toml
python/src/pose_expr/: __init__.py  reader.py  writer.py
python/tests/: tests.py
ruby/: pose.gemspec  pose.rb
ruby/spec/: pose_spec.rb
scheme/: pose.scm  test7.scm
standard-ml/: pose.sml
